update experiments and fix stuck-greyscale bug.
- story embed updated still needs integration with bowerbird
- entypo social icon glyphs for resource actions
- experiment with animation and fade
- about page in arabic
- demo spec page

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -49,7 +49,6 @@ div.about-footer {
   font-size: 21px;
   
   h2 :lang(en) {
-    border: 1px solid green;
     font-size: 0.8em;
   }
 
