--- a/sass/_admin.scss
+++ b/sass/_admin.scss
@@ -1,11 +1,11 @@
-.admin {
-}
+// .admin {
+// }
 
-.admin-panel {
-  border: 1px solid red;
-}
+// .admin-panel {
+//   border: 1px solid red;
+// }
 
-// ================== Evil hacks
-.admin .compact-link {
-  display: none;
-}
+// // ================== Evil hacks
+// .admin .compact-link {
+//   display: none;
+// }
