--- a/sass/_fade.scss
+++ b/sass/_fade.scss
@@ -1,7 +1,6 @@
 
-@mixin fade {
-  @include opacity(0);
-  @include animate(fadeIn ease-in 1);
-
-  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }  
-}
+// @mixin fade {
+//   @include opacity(0);
+//   @include animate(fadeIn ease-in 1);
+//   @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }  
+// }
